syntax = "proto3";

import "person.proto";
import "journal.proto";
import "settings.proto";

option go_package = "model";

message Command {
    string signer = 1;
    int32 price = 2;
    int64 timestamp = 3;
    oneof body {
        CommandBootstrap bootstrap = 4;
        CommandJournalCreate commandJournalCreate = 5;
        CommandJournalUpdateProperties commandJournalUpdateProperties = 6;
        CommandJournalUpdateAuthorization commandJournalUpdateAuthorization = 7;
        CommandJournalEditorAcceptDuty commandJournalEditorAcceptDuty = 8;
        CommandJournalEditorInvite commandJournalEditorInvite = 9;
        CommandJournalEditorResign commandJournalEditorResign = 10;
        CommandSettingsUpdate commandSettingsUpdate = 11;
        CommandPersonCreate personCreate = 12;
        CommandPersonUpdateProperties commandPersonUpdateProperties = 13;
        CommandPersonUpdateAuthorization commandUpdateAuthorization = 14;
        CommandPersonUpdateBalanceIncrement commandPersonUpdateBalanceIncrement = 15;
    }
}
